# fps-aim-rs

./: .gitignore  Cargo.toml
src/: aim_assist.rs  aim_assist.rs.old  errors.rs  inference.rs  interception.rs  main.rs  main.rs.oldd  screen_capture.rs
