[package]
name = "fps-aim"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25.1"
ndarray = "0.15.6"
ort = {version = "2.0.0-rc.2", features=["cuda", "tensorrt", "load-dynamic"]}
rayon = "1.10.0"
thiserror = "1.0.61"
win_desktop_duplication = "*"
winit = "0.26.0"
tokio = { version = "*", features = ["full"] }
libloading = "0.8.3"
half = "2.4.1"

env_logger = { version = "0.11.3", features = [
    "auto-color",
    "humantime",
] }
eframe = "0.27.2"
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0.117"
log = "0.4.21"

[dependencies.windows]
version = "0.39.0"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_System_StationsAndDesktops",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Dxgi",
    "Win32_System_SystemServices",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_UI_HiDpi",
    "Win32_System_Threading"
]
