[package]
name = "fps-aim"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.6"
ndarray = "0.16.1"
ort = {version = "2.0.0-rc.10", features=["half", "cuda", "tensorrt", "load-dynamic"]}
rayon = "1.11.0"
thiserror = "2.0.15"
tokio = { version = "*", features = ["full"] }
libloading = "0.8.3"
half = "2.6.0"

env_logger = { version = "0.11.8", features = [
    "auto-color",
    "humantime",
] }

serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.143"
log = "0.4.27"

[dependencies.windows]
version = "0.61.3"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_System_StationsAndDesktops",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Dxgi",
    "Win32_System_SystemServices",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_UI_HiDpi",
    "Win32_System_Threading"
]
